--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "biuld": "babel src/index.js -d dist",
-    "start": "npm run biuld && node --env-file=.env dist/index.js"
+    "start": "npm run biuld && nodemon --env-file=.env dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "@babel/core": "^7.23.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/preset-env": "^7.23.8"
+    "@babel/preset-env": "^7.23.8",
+    "nodemon": "^3.0.3"
   }
 }
