--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "biuld": "babel src/index.js -d dist",
-    "start": "npm run biuld && nodemon --env-file=.env dist/index.js"
+    "build": "babel src/ -d dist",
+    "start": "npm run build && nodemon --env-file=.env dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,8 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.23.8",
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "debug": "^4.3.4"
   }
 }
